# sucinto

./: .dockerignore  Dockerfile  fly.toml  pyproject.toml
sucinto/: __main__.py  commands.py  config.py  messages.py
tests/: test_sucinto.py
